base/src/test/resources/failure/levels/refparo5.aya.txt
In file $FILE:4:11 ->

  2 | 
  3 | struct TypeStruct : Type
  4 |   | type : Type
                 ^--^ (u + 1) <= u

Error: Cannot solve the following level equation(s):
         (u + 1) <= u

1 error(s), 0 warning(s).
What are you doing?
